2020-10-12 Sergey Kashyrin <ska@kiska.net>
	* common.h: increasing COB_MAX_FIELD_SIZE

2018-07-18 Sergey Kashyrin <ska@kiska.net>
	* common.cpp: Fix in cob_cmp for numeric edited

2018-07-12 Sergey Kashyrin <ska@kiska.net>
	* common.cpp: Fix for SYSTEM
	* common.h: revealing more types as a typedef for plain C.

2018-01-02 Sergey Kashyrin <ska@kiska.net>
	* Fix for cob_get_current_date_and_time_from_os
	*  and functions LOCALE-DATE, LOCALE-TIME

2017-11-28 Sergey Kashyrin <ska@kiska.net>
	* Catch up with Release 2.2
	* So far probably only one important difference - call by content is passing COMP-4
	*  as opposite of COMP-5 in main release.

2017-08-15 Sergey Kashyrin <ska@kiska.net>

	* fileio.cpp, call.cpp, common.cpp, intrinsic.cpp: fixes for VS2017.
	* common.cpp: corrected sprintf format strings in get_config_val

2017-06-19 Sergey Kashyrin <ska@kiska.net>

	* fileio.cpp: fixes for BDB line - small cast issue + small failure while merging C branch.

2017-06-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added CODE_COVERAGE parts as provided by AX_CODE_COVERAGE

2017-04-27 Sergey Kashyrin <ska@kiska.net>

	* All fixes/updates of 2.0 main branch up to 2017-04-27 are retrofited.

2017-04-24 Sergey Kashyrin <ska@kiska.net>

	* All fixes/updates of 2.0 main branch up to 2017-03-31 are retrofited.
	* It does not make sense to repeat all of that here, as the dates are different
	* Please refer to the ChangeLog of the main 2.0 branch

2016-05-26  Sergey Kashyrin <ska@kiska.net>

	* common.cpp : cob_reg_sighnd to extern "C" (handler, UNIX issue)

2016-03-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_set_location, cob_trace_section, cob_exit_common): fix for
	  bug #216 - store a duplicate of cob_last_sfile for tracing, free on exit

2015-11-25  Sergey Kashyrin <ska@kiska.net> Fix for Bug #152 - merged:
2015-05-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
